# tgtools

./: README.md  pyproject.toml  setup.py
examples/Colombia_Pv/: README.md  colombia_fract_vit_ibd.txt
examples/Moldova_Tb/: README.md
tgtools/: __init__.py  analysis.py  cli.py  io.py  models.py
tgtools/io/: __init__.py  base.py  hmmIBD.py  isorelate.py  snp_distance.py  transphylo.py
