[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tgtools"
authors = [{name = "Jody Phelan", email = "jody.phelan@lshtm.ac.uk"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "networkx"
]

[project.scripts]
tgtools = "tgtools.cli:main"